app/assets/stylesheets/schools.css.scss
@import 'base/colors';
@import 'base/fonts';
@import 'base/tables';

body.box-score.schools {
  #main {
    position: relative;

    a.edit-profile {
      position: absolute;
      z-index: 2;
      right: 0;
      top: -40px;

      &:hover {
        text-decoration: none;
      }
    }

    .info {
      padding: 0 0 20px;

      .basic-info {
        height: 100px;
        padding-top: 10px;
        border-bottom: 1px solid #666;
        margin-bottom: 20px;
        background: $eggshell;

        dl {
          height: 100%;

          > div {
            width: 140px;
            height: 100%;
            float: left;
            margin: 0 10px;
          }
        }

        dt {
          margin: 10px 0 3px;
          font-family: $headline-font;
          font-size: 16px;
          text-align: center;
        }

        dd {
          font-size: 13px;
          text-align: center;
          line-height: 1.2em;
        }
      }

      table {
        @include table;
      }
    }
  }
}

body.box-score.schools.edit {
  #main {
    form {
      margin: 20px 0;
    }
  }
}

